...
            children: [
              Row(
                children: const [
                  Icon(Icons.arrow_back_ios, color: Colors.white70, size: 16),
                  SizedBox(width: 8),
                  Text(
                    'Gestion du Budget',
                    style: TextStyle(
                      color: Colors.white,
                      fontWeight: FontWeight.w700,
                      fontSize: 16,
                    ),
                  ),
...
